# stock_rs

./: .gitignore  Cargo.toml  README.md
assets/: resp.json
custom_widget/: Cargo.toml
custom_widget/src/: lib.rs
custom_widget/src/kline/: kblock.rs  kline.rs  klinechart.rs  klinedata.rs  mod.rs
src/: app.rs  crossterm.rs  list.rs  main.rs  model.rs  net.rs  stock.rs  ui.rs
