[package]
name = "stock_rs"
version = "0.1.0"
authors = ["Cao Weixin <caoweixin.love@163.com>"]
edition = "2021"

repository = "https://github.com/razecao1994/stock_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
crossterm = "0.25"

reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

log = "0.4.0"

custom_widget = {path = "custom_widget"}